# yuio

./: .buildinfo  .cl-keeper.yaml  .coveragerc.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.html  comp.bash  comp.zsh  compl.tsv  complete.html  config.html  conftest.py  create_release  exec.html  genindex.html  git.html  index.html  io.html  md.html  objects.inv  parse.html  poe_tasks.toml  push_docs.py  py-modindex.html  pyproject.toml  pytest.toml  robots.txt  search.html  searchindex.js  setup.cfg  setup.py  term.html  test.tape  theme.html  tox.toml  (+3 more)
.github/: dependabot.yml
.github/workflows/: ci.yaml  docs.yaml  test.yml
_modules/: functools.html  index.html  typing.html  yuio.html
_modules/yuio/: app.html  complete.html  config.html  exec.html  git.html  io.html  md.html  parse.html  term.html  theme.html  widget.html
_sources/: app.rst.txt  theme.rst.txt
_static/: pygments.css
docs/: Makefile
docs/source/: api.rst  app.rst  complete.rst  conf.py  config.rst  exec.rst  git.rst  index.rst  installation.rst  io.rst  log.rst  md.rst  parse.rst  term.rst  widget.rst
examples/: README.md  app  app.py  app_config.json  colored_output.py  config.json  config.py  custom_completer  demo.webm  git.py  io_colored_output.py  io_colors.py  io_edit.py  io_external_editor.py  io_interactive_shell.py  io_log_handling.py  io_logging.py  io_prompt.py  io_prompt_list.py  io_prompt_multiselect.py  io_prompt_secret.py  io_py_logging.py  io_questions.py  io_tasks.py  io_tasks_multithreaded.py  log  log_handling.py  logging_and_colors.py  prompt.py  prompt_multiselect.py  questions.py  release.py  tasks.py  tasks_multithreaded.py  theme.py
examples/apps/: app  custom_completer
examples/cookbook/: custom_task.py  print_to_file.py
examples/docs/: cli_config.py  cli_config_explicit_group.py  cli_config_help.py  cli_config_inline.py  cli_config_nested_group.py  cli_config_no_group.py  cli_parsers.py  cli_settings.py  cli_subcommands.py  configs_merging.py  configs_renaming.py  configs_skipping.py  hw_first_yuio_app.py  hw_flags.py  hw_help.py  hw_something_colorful.py  io_colors.py  io_colors_t.py  io_edit.py  io_hl.py  io_join_t.py  io_markdown.py  io_printing.py  io_printing_t.py  io_progress.py  io_querying.py  io_repr.py  io_repr_t.py  io_rst.py  io_suspend.py  io_suspend_complex.py  themes_accent_colors.py  themes_progress_bars.py
examples/widgets/: choice.py  completion.py  completion_file.py  help.py  input.py  multiselect.py  vertical_layout.py
pr-preview/pr-3/: .buildinfo  app.html  complete.html  config.html  exec.html  genindex.html  git.html  index.html  io.html  md.html  objects.inv  parse.html  py-modindex.html  search.html  searchindex.js  term.html  theme.html  widget.html
scripts/: check_file_headers  output_stats  resolve_venv.sh  update_branches  update_dist  update_vendored
test/: conftest.py  test_app.py  test_cli.py  test_color.py  test_complete.py  test_config.py  test_dbg.py  test_doc.py  test_exec.py  test_git.py  test_hl.py  test_io.py  test_json_schema.py  test_log.py  test_md.py  test_parse.py  test_public_exports.py  test_rst.py  test_secret.py  test_string.py  test_string_314.py  test_term.py  test_terminal_interactions.py  test_theme.py  test_utils.py  test_widget.py
test/completers/: conftest.py  test_bash.py  test_fish.py  test_zsh.py
test/dbg_hooks/: pyproject.toml  yuio_test_hooks.py
test/test_deps/dbg_hooks/: dbg_hooks.py  pyproject.toml
test/test_doc/: test_admonition_empty_title.yml  test_admonition_multiple_paragraphs.yml  test_admonition_with_custom_title.yml  test_code_block_unknown_syntax.yml  test_code_block_with_blank_lines.yml  test_complete_document_structure.yml  test_complex_nested_indentation.yml  test_different_enumerator_kinds_capital_letter_.yml  test_different_enumerator_kinds_capital_roman_.yml  test_different_enumerator_kinds_number_.yml  test_different_enumerator_kinds_small_letter_.yml  test_different_enumerator_kinds_small_roman_.yml  test_empty_admonition.yml  test_empty_code_block.yml  test_empty_document.yml  test_empty_footnote.yml  test_empty_heading.yml  test_empty_list.yml  test_empty_paragraph.yml  test_empty_quote.yml  test_empty_text_region.yml  test_first_element_in_document.yml  test_footnote_container.yml  test_footnote_long_marker.yml  test_heading_levels_level_1_.yml  test_heading_levels_level_2_.yml  test_heading_levels_level_3_.yml  test_heading_levels_level_4_.yml  test_heading_levels_level_5_.yml  test_heading_levels_level_6_.yml  test_heading_with_allow_headings_false.yml  test_heading_with_inline_formatting.yml  test_list_starting_non_one.yml  test_list_with_empty_items.yml  test_list_with_wide_markers.yml  test_long_nowrap_text.yml  test_mixed_empty_non_empty_items.yml  test_multi_paragraph_list_items.yml  test_multiple_headings_succession.yml  test_multiple_paragraphs.yml  (+28 more)
test/test_hl/: test_base_color.yml  test_basic_pattern.yml  test_builtin_types_bool_.yml  test_builtin_types_dict_.yml  test_builtin_types_float_.yml  test_builtin_types_int_.yml  test_builtin_types_list_.yml  test_builtin_types_str_.yml  test_builtins_false_.yml  test_builtins_none_.yml  test_builtins_true_.yml  test_capturing_groups.yml  test_comment.yml  test_comments_inline_.yml  test_comments_simple_.yml  test_complex_code.yml  test_complex_json.yml  test_default_color_as_color.yml  test_default_color_as_string.yml  test_error_message.yml  test_exception_group_heading.yml  test_file_line.yml  test_full_traceback.yml  test_heading.yml  test_keywords_case_statement_.yml  test_keywords_double_brackets_.yml  test_keywords_false_.yml  test_keywords_for_loop_.yml  (+66 more)
yuio/: Untitled-1.py  __init__.py  _sphinx.py  _t.py  _typing.py  _typing_ext.py  _utils.py  app.py  cli.py  color.py  complete.bash  complete.fish  complete.py  complete.zsh  config.py  dbg.py  doc.py  editor.py  exec.py  git.py  hl.py  io.py  json_schema.py  log.py  md.py  parse.py  rst.py  secret.py  string.py  term.py  term_menu.py  theme.py  ty.py  util.py  widget.py
(+1007 files in other folders)
