[project]
name = "yuio"
authors = [{ name = "Tamika Nomara", email = "taminomara@gmail.com" }]
description = "Lite and user-friendly CLI library"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: System :: Logging",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = ["typing-extensions>=4.13,<5"]

[dependency-groups]
dev = [
    "sphinx-autobuild==2025.8.25",
    { include-group = "ci" },
    { include-group = "doc" },
    { include-group = "lint" },
    { include-group = "test" },
]
test = [
    "jsonschema==4.26.0",
    "libtmux==0.53.0",
    "pyright==1.1.408",
    "pytest-cov==7.0.0",
    "pytest-regressions==2.9.1",
    "pytest==9.0.2",
    "PyYaml==6.0.3",
    "sybil==9.3.0",
    "toml==0.10.2",
]
doc = [
    "furo==2025.12.19",
    "sphinx_design==0.6.1",
    "sphinx-vhs==1.4.0",
    "sphinx-syntax==1.1.1",
    "sybil==9.3.0",
]
lint = ["ruff==0.14.14", "pre-commit==4.5.1"]
ci = [
    "PyGithub==2.8.1",
    "tox==4.34.1",
    "virtualenv-pyenv==0.6.0",
    "pytest-cov==7.0.0",
    "genbadge[coverage]==1.1.3",
    "cl-keeper==0.0.0-b6",
]

[project.urls]
Documentation = "https://yuio.readthedocs.io/"
Issues = "https://github.com/taminomara/yuio/issues"
Source = "https://github.com/taminomara/yuio/"
Changelog = "https://github.com/taminomara/yuio/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel>=0.40"]

[tool.setuptools_scm]
write_to = "yuio/_version.py"

[tool.tox]
requires = ["tox>=4"]
env_list = [
    "3.14t",
    "3.14",
    "3.13",
    "3.12",
    "3.11",
    "3.10",
    "type",
    "lint",
    "coverage-clean",
    "coverage-combine",
]
depends = []

[tool.tox.env_run_base]
description = "Run tests under {base_python}"
dependency_groups = ["test"]
commands = [
    [
        "pip",
        "install",
        "-e",
        "./test/test_deps/dbg_hooks",
        "-e",
        "./test/test_deps/dbg_dep",
    ],
    [
        "pytest",
        "--color=yes",
        "--cov",
        "--cov-append",
        "-m not flaky",
    ],
]
pass_env = ["PYTEST*", "COVERAGE*"]
depends = ["coverage-clean"]
package = "editable"
set_env = { COVERAGE_FILE = "{env:COVERAGE_FILE:.coverage}.{envname}" }

[tool.tox.env.type]
description = "Run type check"
dependency_groups = ["test"]
commands = [["pyright"]]
base_python = ["3.14"]
depends = []

[tool.tox.env.lint]
description = "Run pre-commit hooks"
dependency_groups = ["lint"]
commands = [["pre-commit", "run", "--all", "--color=always"]]
depends = []

[tool.tox.env.coverage-clean]
description = "Delete coverage data"
dependency_groups = ["test"]
skip_install = true
commands = [["coverage", "erase"]]
depends = []
set_env = { COVERAGE_FILE = "{env:COVERAGE_FILE:.coverage}" }

[tool.tox.env.coverage-combine]
description = "Combine coverage data"
skip_install = true
dependency_groups = ["test"]
commands = [["coverage", "combine"]]
depends = ["3.14", "3.13", "3.12", "3.11", "3.10"]
set_env = { COVERAGE_FILE = "{env:COVERAGE_FILE:.coverage}" }

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--strict-markers", "-p no:doctest", "-m not full"]
testpaths = ["examples", "test", "yuio", "docs"]
markers = [
    "windows: test runs only on windows runners",
    "linux: test runs only on linux runners",
    "darwin: test runs only on darwin runners",
    "full: long test or test with special requirements, only runs in CI",
    "flaky: tests with tmux tend to be flaky, so we run them manually",
]

[tool.pyright]
include = ["yuio", "examples"]
exclude = [
    "**/__pycache__",
    "yuio/_version.py",
    "yuio/ext/sphinx/*.py",
    "yuio/_dist/*",
]
typeCheckingMode = "strict"
pythonVersion = "3.14"
pythonPlatform = "All"

reportMissingParameterType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryTypeIgnoreComment = "warning"
reportPrivateUsage = "none"
reportUnusedFunction = "none"
reportConstantRedefinition = "none"
reportRedeclaration = "none"
reportDeprecated = "none"
deprecateTypingAliases = true

[tool.ruff]
exclude = ["examples/docs/*", "yuio/_dist/*"]
target-version = "py310"

[tool.ruff.lint]
typing-modules = ["yuio._typing"]
extend-select = ["I", "INP", "T20", "PT", "RET", "SIM", "SLOT", "RUF022"]
ignore = [
    "E402",   # Module level import not at top of file
    "E722",   # Do not use bare `except`
    "E741",   # Ambiguous variable name
    "E731",   # Do not assign a `lambda` expression, use a `def`
    "PT015",  # Assertion is always `False`
    "PT011",  # Too broad error type
    "PT012",  # `pytest.raises()` block should contain a single simple statement
    "PT017",  # Found assertion on exception `e` in `except` block
    "RET505", # Unnecessary `else` after `return` statement
    "RET506", # Unnecessary `else` after `raise` statement
    "RET507", # Unnecessary `else` after `continue` statement
    "RET508", # Unnecessary `else` after `break` statement
    "SIM103", # Return the negated condition directly
    "SIM105", # Use `contextlib.suppress` instead of `try`-`except`-`pass`
    "SIM108", # Use ternary operator instead of `if`-`else`-block
    "SIM114", # Combine `if` branches using logical `or` operator
    "SIM118", # Use `key in dict` instead of `key in dict.keys()`
]
extend-safe-fixes = [
    "RUF022", # Sort `__all__`.
    "PT006",  # Rewrite arguments for `pytest.mark.parametrize`.
]
future-annotations = true

[tool.ruff.lint.per-file-ignores]
"test/**/*" = ["T20", "I002", "SIM102", "SIM117"]
"examples/**/*" = ["T20", "I002", "INP001"]
"docs/**/*" = ["T20", "I002", "INP001"]

[tool.ruff.per-file-target-version]
"test/**/*_314.py" = "py314"
"examples/**/*" = "py314"
"docs/**/*" = "py314"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
    "typing",
]

[tool.ruff.lint.isort.sections]
typing = ["typing", "typing_extensions", "yuio._typing_ext", "yuio._typing"]

[tool.ruff.format]
docstring-code-format = true

[tool.coverage.run]
patch = ["subprocess"]
relative_files = true

[tool.coverage.report]
include = ["yuio/**/*.py"]
omit = [
    "yuio/_version.py",
    "yuio/_typing.py",
    "yuio/_typing_ext.py",
    "yuio/_dist/**/*.py",
    "test/**/*.py",
]
exclude_also = [
    "def __repr__",
    "def __rich_repr__",
    "if yuio._debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if (|_t\\.|typing\\.)TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "except ImportError:",
    "assert False",
]

[tool.coverage.html]
title = "Yuio Coverage Report"
