[project]
name = "yuio"
authors = [{ name = "Tamika Nomara", email = "taminomara@gmail.com" }]
description = "Lite and user-friendly CLI library"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: System :: Logging",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = ["typing-extensions>=4.13,<5"]

[dependency-groups]
dev = [
    { include-group = "ci" },
    { include-group = "doc" },
    { include-group = "lint" },
    { include-group = "test" },
]
test = [
    "jsonschema==4.26.0",
    "pyright==1.1.408",
    "pytest-cov==7.0.0",
    "pytest-regressions==2.9.1",
    "pytest==9.0.2",
    "PyYaml==6.0.3",
    "sybil==9.3.0",
    "toml==0.10.2",
]
doc = [
    "furo==2025.12.19",
    "sphinx_design==0.7.0",
    "sphinx-autobuild==2025.8.25",
    "sphinx-syntax==1.2.0",
    "sphinx-vhs==1.5.1",
    "sphinx==9.1.0",
    "sybil==9.3.0",
]
lint = [
    "cl-keeper==0.0.0-b6",
    "prek>=0.3.2",
    "ruff==0.15.4",
]
ci = [
    "cl-keeper==0.0.0-b6",
    "genbadge[coverage]==1.1.3",
    "PyGithub==2.8.1",
    "pytest-cov==7.0.0",
    "tox==4.34.1",
    "tox-uv==1.29.0",
]
test-extra = ["dbg-dep", "dbg-hooks"]

[project.urls]
Documentation = "https://yuio.readthedocs.io/"
Issues = "https://github.com/taminomara/yuio/issues"
Source = "https://github.com/taminomara/yuio/"
Changelog = "https://github.com/taminomara/yuio/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel>=0.40"]

[tool.setuptools_scm]
write_to = "yuio/_version.py"

[tool.pyright]
include = ["yuio", "examples"]
exclude = [
    "**/__pycache__",
    "yuio/_version.py",
    "yuio/ext/sphinx/*.py",
    "yuio/_dist/*",
]
typeCheckingMode = "strict"
pythonVersion = "3.14"
pythonPlatform = "All"

reportMissingParameterType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryTypeIgnoreComment = "warning"
reportPrivateUsage = "none"
reportUnusedFunction = "none"
reportConstantRedefinition = "none"
reportRedeclaration = "none"
reportDeprecated = "none"
deprecateTypingAliases = true

[tool.ruff]
exclude = ["examples/docs/*", "yuio/_dist/*"]
target-version = "py310"

[tool.ruff.lint]
typing-modules = ["yuio._typing"]
extend-select = ["I", "INP", "T20", "PT", "RET", "SIM", "SLOT", "RUF022"]
ignore = [
    "E402",   # Module level import not at top of file
    "E722",   # Do not use bare `except`
    "E741",   # Ambiguous variable name
    "E731",   # Do not assign a `lambda` expression, use a `def`
    "PT015",  # Assertion is always `False`
    "PT011",  # Too broad error type
    "PT012",  # `pytest.raises()` block should contain a single simple statement
    "PT017",  # Found assertion on exception `e` in `except` block
    "RET505", # Unnecessary `else` after `return` statement
    "RET506", # Unnecessary `else` after `raise` statement
    "RET507", # Unnecessary `else` after `continue` statement
    "RET508", # Unnecessary `else` after `break` statement
    "SIM103", # Return the negated condition directly
    "SIM105", # Use `contextlib.suppress` instead of `try`-`except`-`pass`
    "SIM108", # Use ternary operator instead of `if`-`else`-block
    "SIM114", # Combine `if` branches using logical `or` operator
    "SIM118", # Use `key in dict` instead of `key in dict.keys()`
]
extend-safe-fixes = [
    "RUF022", # Sort `__all__`.
    "PT006",  # Rewrite arguments for `pytest.mark.parametrize`.
]
future-annotations = true

[tool.ruff.lint.per-file-ignores]
"test/**/*" = ["T20", "I002", "SIM102", "SIM117"]
"examples/**/*" = ["T20", "I002", "INP001"]
"docs/**/*" = ["T20", "I002", "INP001"]

[tool.ruff.per-file-target-version]
"test/**/*_314.py" = "py314"
"examples/**/*" = "py314"
"docs/**/*" = "py314"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
    "typing",
]

[tool.ruff.lint.isort.sections]
typing = ["typing", "typing_extensions", "yuio._typing_ext", "yuio._typing"]

[tool.ruff.format]
docstring-code-format = true

[tool.uv]
default-groups = ["dev", "test-extra"]

[tool.uv.dependency-groups]
dev = { requires-python = ">=3.14" }
test = { requires-python = ">=3.10" }
doc = { requires-python = ">=3.14" }
lint = { requires-python = ">=3.14" }
ci = { requires-python = ">=3.14" }

[tool.uv.workspace]
members = ["test/test_deps/dbg_dep", "test/test_deps/dbg_hooks"]

[tool.uv.sources]
dbg-dep = { workspace = true, editable = true }
dbg-hooks = { workspace = true, editable = true }
