[metadata]
name = yuio
description = Building friendly CLIs with python: colored output, user interactions, configs and more
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = '>=3.8'
author = Tamika Nomara
author_email = taminomara@gmail.com
url = https://github.com/taminomara/yuio
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
include_package_data = True
setup_requires =
    setuptools-scm>=3.5.0
    setuptools>=42.0
    wheel
    pep517
packages = find:

[options.package_data]
yuio =
    py.typed
